Fixed spacing in nag, added yellow top border
changed key words to normal weight

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body{
 
 main{
 	padding: 0.5em 0.5em;
-	font-family: Georgia, sans serif;
+	font-family: 'Georgia', sans-serif;
 	line-height: 1.5em
 }
 
@@ -22,12 +22,14 @@ h1, h2, h3{
 
 h1{
 	text-align: center;
-	margin-bottom: 0.75em;
+	margin-bottom: 0.25em;
 	font-size: 2.5rem;
 }
 
 h2{
 	font-size: 1.75rem;
+	border-top: solid #ffe524;
+
 }
 
 h3{
@@ -36,21 +38,23 @@ h3{
 
 nav{
 	text-align: center;
+	padding-bottom: 0.5em;
 }
 
 nav li{
 	display: inline;
 	background-color: #b2a215;
-	padding: 0.5em;
+	padding: 0.5em 0;
 	border-radius: 5px;
 	margin-bottom: 0.75em;
+	font-size: 1.2rem
 }
 
 nav li a{
 	display: inline-block;
 	color: white;
 	text-decoration: none;
-	padding: 0.5em 0.75em;
+	padding: 0.5em 0.25em;
 }
 
 nav li:hover{
@@ -61,12 +65,12 @@ nav li:hover{
 ol{
 	list-style-type: none;
 	margin: 0;
-	padding: 0 1em;
+	padding: 0;
 	display: inline-block;
 }
 
 dt{
-	text-style: bold; 															/*HOW MAKE BOLD?*/
+	font-weight: bold;
 }
 
 blockquote{
@@ -97,7 +101,6 @@ p{
 	margin:0;
 }
 
-hr{
-	color: #ffe524;
-	height: 0.1em;
+b{
+	font-weight: normal;
 }
